--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -768,19 +768,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                10);
+		                                                                    
+		        10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                0);
+		                                                                     
+		       0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1329,10 +1331,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                25);
+		                                                                    
+		        25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,12 +1726,13 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                          
+	filter: progid :                                                       
 		                                                        
 		                           
 		                           
 		                           
-		 DXImageTransform.Microsoft.AlphaImageLoader (    
+		              DXImageTransform.Microsoft.AlphaImageLoader (  
+		              
 		 
 		   
 		      
@@ -1744,7 +1748,8 @@ p#clear {
 		 
 		    
 		                                                                   
-		                      src =                         
+		                                   src =   
+		                                  
 		
 		 
 		   
@@ -1756,7 +1761,10 @@ p#clear {
 		                      
 		                      
 		                      
-		'../../build/colorpicker/assets/picker_mask.png', sizingMethod =
+		             '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =       
+		 
+		   
 		                
 		 
 		   
@@ -1770,7 +1778,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                            'scale' );
+		                                         'scale' );
 }
 
 .yui-picker-mask {
@@ -1945,10 +1953,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                25);
+		                                                                    
+		        25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2053,10 +2062,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                12);
+		                                                                    
+		        12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2138,13 +2148,18 @@ p#clear {
 	position: relative;
 	top: 0;
 	left: 0;
-	z-index: 1;
-	color: #000;
-	padding: 2px 5px;
-	border-color: #D4C237 #A6982B #A6982B #A6982B;
-	border-width: 1px;
-	border-style: solid;
-	background-color: #FFEE69;
+	z-index: 2;
+	padding: 6px !important;
+	color: white !important;
+	border-width: 0 !important;
+	background-color: #434C56 !important;
+	border-top-left-radius: 5px 5px;
+	border-top-right-radius: 5px 5px;
+	border-bottom-right-radius: 5px 5px;
+	border-bottom-left-radius: 5px 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	font-size: 90% !important;
 }
 
 .yui-skin-sam .yui-tt.show-scrollbars .bd {
@@ -2157,14 +2172,21 @@ p#clear {
 	left: -3px;
 	bottom: -3px;
 	background-color: #000;
+	border-top-left-radius: 5px 5px;
+	border-top-right-radius: 5px 5px;
+	border-bottom-right-radius: 5px 5px;
+	border-bottom-left-radius: 5px 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                12);
+		                                                                    
+		        12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2226,10 +2248,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                0);
+		                                                                     
+		       0);
 }
 
 .yui-dt-resizerproxy {
@@ -2238,10 +2261,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                0);
+		                                                                     
+		       0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2337,10 +2361,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                25);
+		                                                                    
+		        25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2727,19 +2752,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2837,10 +2864,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-editor-container iframe {
@@ -3941,10 +3969,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4711,10 +4740,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                12);
+		                                                                    
+		        12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5225,18 +5255,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                0);
+		                                                                     
+		       0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5324,10 +5356,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =   
+	filter: alpha(opacity =                
 		                                                         
 		                                                         
-		                                                                 100);
+		                                                                   
+		          100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5583,19 +5616,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5693,10 +5728,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
-		                                                                50);
+		                                                                    
+		        50);
 }
 
 .yui-editor-container iframe {
@@ -7750,10 +7786,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                                
+	filter: progid :                                             
 		                                                        
 		                                   
-		                               DXImageTransform.Microsoft.gradient ( 
+		                                   
+		        DXImageTransform.Microsoft.gradient (           
+		
+		 
 		    
 		        
 		                  
@@ -7763,14 +7802,15 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                  startColorstr =                     
+		                               startColorstr =    
+		                             
 		 
 		   
 		      
 		              
 		                            
-		                                                     "#0000FF",
-		endColorstr =       
+		                                                             
+		    "#0000FF", endColorstr =                    
 		 
 		  
 		      
@@ -7779,7 +7819,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		 "#19558D" );
+		              "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8368,10 +8408,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                   
+	filter: progid :                                
 		                                                        
 		                                   
-		                  DXImageTransform.Microsoft.gradient (  
+		                               DXImageTransform.Microsoft.gradient ( 
+		    
+		        
 		                  
 		
 		 
@@ -8381,20 +8423,22 @@ li.tsearch {
 		  
 		       
 		                                                         
-		     startColorstr =        
+		                  startColorstr =                     
 		 
 		   
 		      
 		              
 		                            
 		                                                             
-		   "#A7BBCC", endColorstr =                   
+		                "#A7BBCC", endColorstr =
+		                               
 		 
 		   
 		       
 		              
 		                             
-		                                                    "#879BAD" );
+		                                                             
+		   "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9964,7 +10008,7 @@ div.u4 span {
 }
 
 div.i_rep {
-	z-index: 999;
+	z-index: 1;
 	background-color: #EDEDED;
 	border: 1px solid green;
 	padding: 5px;
@@ -9974,4 +10018,82 @@ div.i_rep {
 
 div.mt-12 {
 	margin-top: -20px;
+}
+
+div.lastposter a {
+	font-weight: 400 !important;
+}
+
+#loading_mask {
+	position: relative;
+	float: right;
+	top: 10px;
+	margin-right: 20px;
+}
+
+div.yui3-aclist {
+	z-index: 999 !important;
+	background-color: white !important;
+	border: 1px solid black !important;
+	color: #333 !important;
+}
+
+.yui3-aclist-item {
+	border-top: 1px solid white !important;
+	border-bottom: 1px solid white !important;
+}
+
+.yui3-aclist-item-hover {
+	background-color: #D8DFEA !important;
+	color: #19558D !important;
+	border-top: 1px dotted black !important;
+	border-bottom: 1px dotted black !important;
+}
+
+span.c_answrd {
+	color: green;
+	font-weight: bold;
+}
+
+#loading {
+	margin-left: 5px;
+	display: block;
+	background: rgba(0, 0, 0, 0.5);
+	border-radius: 8px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	padding: 10px;
+	color: white;
+	font-weight: bold;
+	font-family: times-new-roman !important;
+	font-size: 110%;
+}
+
+.yui3-tokeninput {
+	width: 400px !important;
+}
+
+#loading div.yui3-widget-bd {
+	overflow: hidden !important;
+	display: block;
+	width: 65px;
+}
+
+#loading div.yui3-widget-bd img {
+	margin-left: -10px;
+}
+
+div.c6 {
+	color: #666;
+}
+
+.yui3-state-default,.yui3-state-active,.yui3-state-hover,.yui3-calendar-content,.yui3-colorpicker-content,.yui3-colorpicker-panel-content,.yui3-image-gallery-paginator .yui3-image-gallery-paginator-thumb,.yui3-image-viewer-loading .yui3-image-viewer-bd,.yui3-loadingmask-message,.yui3-loadingmask-message-content,.yui3-progress-bar-content,.yui3-progress-bar-status
+	{
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	border-top-left-radius: 4px 4px;
+	border-top-right-radius: 4px 4px;
+	border-bottom-right-radius: 4px 4px;
+	border-bottom-left-radius: 4px 4px;
 }
