--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -768,21 +768,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        10);
+		         10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                     
-		       0);
+		        0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1331,11 +1331,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        25);
+		         25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1726,12 +1726,12 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                                       
+	filter: progid :                                                        
 		                                                        
 		                           
 		                           
 		                           
-		              DXImageTransform.Microsoft.AlphaImageLoader (  
+		               DXImageTransform.Microsoft.AlphaImageLoader (   
 		              
 		 
 		   
@@ -1748,7 +1748,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                   src =   
+		                                    src =    
 		                                  
 		
 		 
@@ -1761,8 +1761,8 @@ p#clear {
 		                      
 		                      
 		                      
-		             '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =       
+		              '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =        
 		 
 		   
 		                
@@ -1778,7 +1778,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                                         'scale' );
+		                                          'scale' );
 }
 
 .yui-picker-mask {
@@ -1953,11 +1953,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        25);
+		         25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2062,11 +2062,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        12);
+		         12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2182,11 +2182,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        12);
+		         12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2248,11 +2248,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                     
-		       0);
+		        0);
 }
 
 .yui-dt-resizerproxy {
@@ -2261,11 +2261,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                     
-		       0);
+		        0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2361,11 +2361,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        25);
+		         25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2752,21 +2752,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2864,11 +2864,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-editor-container iframe {
@@ -3969,11 +3969,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4740,11 +4740,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        12);
+		         12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5255,20 +5255,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                     
-		       0);
+		        0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5356,11 +5356,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                
+	filter: alpha(opacity =                 
 		                                                         
 		                                                         
 		                                                                   
-		          100);
+		           100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5616,21 +5616,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5728,11 +5728,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                  
 		                                                         
 		                                                         
 		                                                                    
-		        50);
+		         50);
 }
 
 .yui-editor-container iframe {
@@ -7786,11 +7786,11 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                                             
+	filter: progid :                                              
 		                                                        
 		                                   
 		                                   
-		        DXImageTransform.Microsoft.gradient (           
+		         DXImageTransform.Microsoft.gradient (            
 		
 		 
 		    
@@ -7802,7 +7802,7 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                               startColorstr =    
+		                                startColorstr =     
 		                             
 		 
 		   
@@ -7810,7 +7810,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		    "#0000FF", endColorstr =                    
+		     "#0000FF", endColorstr =                     
 		 
 		  
 		      
@@ -7819,7 +7819,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		              "#19558D" );
+		               "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8408,10 +8408,11 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                
+	filter: progid :                                 
 		                                                        
 		                                   
-		                               DXImageTransform.Microsoft.gradient ( 
+		                                DXImageTransform.Microsoft.gradient (
+		 
 		    
 		        
 		                  
@@ -8423,14 +8424,14 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                  startColorstr =                     
+		                   startColorstr =                      
 		 
 		   
 		      
 		              
 		                            
 		                                                             
-		                "#A7BBCC", endColorstr =
+		                 "#A7BBCC", endColorstr = 
 		                               
 		 
 		   
@@ -8438,7 +8439,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		   "#879BAD" );
+		    "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9842,6 +9843,14 @@ div.com_like a,a.c_like {
 	border-bottom-left-radius: 5px 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+}
+
+.lpad5 {
+	padding-left: 5px !important;
+}
+
+.pad2 {
+	padding: 2px;
 }
 
 .pad5 {
