Added "Edit profile" feature

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -304,17 +304,14 @@ input,button,textarea,select,optgroup,option {
 }
 
 input,button,textarea,select {
-	*font-size: 100%;
+	*font-size: 110%;
+	padding: 3px;
 }
 
 body {
 	font: 13px/1.231 arial, helvetica, clean, sans-serif;
 	*font-size: small;
 	*font: x-small;
-}
-
-select,input,button,textarea,button {
-	font: 99% arial, helvetica, clean, sans-serif;
 }
 
 table {
@@ -768,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         10);
+		            10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                     
-		        0);
+		           0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1331,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         25);
+		            25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1726,12 +1723,13 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                                        
+	filter: progid :  
+		                                                        
 		                                                        
 		                           
 		                           
 		                           
-		               DXImageTransform.Microsoft.AlphaImageLoader (   
+		                  DXImageTransform.Microsoft.AlphaImageLoader (      
 		              
 		 
 		   
@@ -1748,7 +1746,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                    src =    
+		                                       src =       
 		                                  
 		
 		 
@@ -1761,8 +1759,8 @@ p#clear {
 		                      
 		                      
 		                      
-		              '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =        
+		                 '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =           
 		 
 		   
 		                
@@ -1778,7 +1776,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                                          'scale' );
+		                                             'scale' );
 }
 
 .yui-picker-mask {
@@ -1953,11 +1951,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         25);
+		            25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2062,11 +2060,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         12);
+		            12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2182,11 +2180,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         12);
+		            12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2248,11 +2246,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                     
-		        0);
+		           0);
 }
 
 .yui-dt-resizerproxy {
@@ -2261,11 +2259,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                     
-		        0);
+		           0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2361,11 +2359,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         25);
+		            25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2752,21 +2750,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2864,11 +2862,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-editor-container iframe {
@@ -3969,11 +3967,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4740,11 +4738,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         12);
+		            12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5255,20 +5253,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                     
-		        0);
+		           0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5356,11 +5354,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                 
+	filter: alpha(opacity =                    
 		                                                         
 		                                                         
 		                                                                   
-		           100);
+		              100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5616,21 +5614,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5728,11 +5726,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                  
+	filter: alpha(opacity =                     
 		                                                         
 		                                                         
 		                                                                    
-		         50);
+		            50);
 }
 
 .yui-editor-container iframe {
@@ -7786,11 +7784,11 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                                              
+	filter: progid :                                                 
 		                                                        
 		                                   
 		                                   
-		         DXImageTransform.Microsoft.gradient (            
+		            DXImageTransform.Microsoft.gradient (               
 		
 		 
 		    
@@ -7802,7 +7800,7 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                startColorstr =     
+		                                   startColorstr =        
 		                             
 		 
 		   
@@ -7810,7 +7808,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		     "#0000FF", endColorstr =                     
+		        "#0000FF", endColorstr =                        
 		 
 		  
 		      
@@ -7819,7 +7817,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		               "#19558D" );
+		                  "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -7913,8 +7911,8 @@ h3 {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 50px;
-	padding: 40px;
-	width: 500px;
+	padding: 35px;
+	width: 560px;
 }
 
 #tools .tool {
@@ -8299,14 +8297,14 @@ div.tags-list b {
 	cursor: pointer;
 }
 
-#qtypes,.qheader, .qtypes {
+#qtypes,.qheader,.qtypes {
 	clear: both;
 	float: left;
 	width: 100%;
 	margin-bottom: 6px;
 }
 
-#qtypes, .qtypes {
+#qtypes,.qtypes {
 	border-bottom: 1px solid #666;
 	padding-bottom: 6px;
 }
@@ -8408,10 +8406,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                 
+	filter: progid :                                    
 		                                                        
 		                                   
-		                                DXImageTransform.Microsoft.gradient (
+		                                   DXImageTransform.Microsoft.gradient
+		(  
+		
 		 
 		    
 		        
@@ -8424,14 +8424,14 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                   startColorstr =                      
+		                      startColorstr =                         
 		 
 		   
 		      
 		              
 		                            
 		                                                             
-		                 "#A7BBCC", endColorstr = 
+		                    "#A7BBCC", endColorstr =    
 		                               
 		 
 		   
@@ -8439,7 +8439,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		    "#879BAD" );
+		       "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8660,6 +8660,10 @@ span.read {
 	background-position: -80px -96px;
 }
 
+span.key {
+	background-position: -114px -128px;
+}
+
 /**
 * This is just to load the sprite and then 
 * it will show black icon, but the purpose is to
@@ -8721,13 +8725,13 @@ div.tag1 span.ts {
 	cursor: pointer;
 }
 
-#qtypes a, .qtypes a {
+#qtypes a,.qtypes a {
 	padding: 6px;
 	margin-right: 3px;
 	margin-left: 3px;
 }
 
-#qtypes a.qtype_current, .qtypes  a.qtype_current{
+#qtypes a.qtype_current,.qtypes  a.qtype_current {
 	border-top: 1px solid #666;
 	border-left: 1px solid #666;
 	border-right: 1px solid #666;
@@ -10105,4 +10109,39 @@ div.c6 {
 	border-top-right-radius: 4px 4px;
 	border-bottom-right-radius: 4px 4px;
 	border-bottom-left-radius: 4px 4px;
+}
+
+.vtop,.vtop td {
+	vertical-align: top;
+}
+
+.eprofile input {
+	color: #3B5998;
+	!
+	important;
+}
+
+.eprofile textarea {
+	padding: 3px;
+	border: 1px solid gold;
+}
+
+table.user_stuff {
+	width: 90%;
+}
+
+.user_description {
+	width: 100%;
+	height: 200px;
+	min-height: 100px;
+	padding: 10px; overflow : auto;
+	white-space: pre;
+	height: 90px;
+	background-color: #EEE;
+	overflow: auto;
+}
+
+td.ar {
+	text-aligh: right;
+	aligh: right;
 }
